moved processing of window-min/max messages from WM_SYSCOMMAND to WM_WINDOWPOSCHANGED. bug 63052 code=hyp-x@inf.bme.hu,r=hyatt,me